Fixes SQL statement that meant to update the `date` on publish immediately fixes some layout problems and removes some redundant text
git-svn-id: http://www.zenphoto.org/svn/trunk@3652 46129fc4-274e-7f48-8cfa-5da4c607681c

--- a/zp-core/plugins/zenpage/zenpage.css
+++ b/zp-core/plugins/zenpage/zenpage.css
@@ -550,7 +550,11 @@ div.tabs>div h2 {
 .scheduledate {
 	color: #FF8A00;
 	font-weight: normal;
-	
+}
+
+.inactivescheduledate {
+	color: red;
+	font-weight: normal;
 }
 
 .expiredate {
